[project]
name = "owlpay-harbor-mcp-server"
version = "0.0.1"
description = "Search Owlpay Harbor documentation and return matching sections"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "OwlTing Group" }
]
maintainers = [
  { name = "George Chen", email = "george_chen@owlting.com" }
]

keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "mcp>=1.1.3",
  "pydantic>=2.0.0",
  "requests>=2.32.3",
]

[project.scripts]
owlpay-harbor-mcp-server = "owlpay_harbor_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pyright>=1.1.389",
  "ruff>=0.7.3",
]

